@@ -143,4 +143,5 @@ public class ErrorMessages {
   public static ErrorMessages EMITTING_INPUTSTREAM_CTOR = new ErrorMessages("EMITTING_INPUTSTREAM_CTOR");
   public static ErrorMessages SWITCH_METHOD_DEPRECATED = new ErrorMessages("SWITCH_METHOD_DEPRECATED");
   public static ErrorMessages TABLE_METHOD_DEPRECATED = new ErrorMessages("TABLE_METHOD_DEPRECATED");
+  public static ErrorMessages IMPOSSIBLE_CHARCLASS_RANGE = new ErrorMessages("IMPOSSIBLE_CHARCLASS_RANGE");
 }
