@@ -81,3 +81,4 @@ PROPS_ARG_REQUIRES_UNICODE_VERSION=The --uniprops option requires a Unicode vers
 EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. In JFlex 1.6, the default will be to NOT emit this constructor. The inputstreamctor option will cause this constructor to be emitted in JFlex 1.5 and 1.6; the version after 1.6 will never emit this constructor.
 SWITCH_METHOD_DEPRECATED=The 'switch' code generation method is deprecated and will be removed in JFlex 1.6.
 TABLE_METHOD_DEPRECATED=The 'table' code generation method is deprecated and will be removed in JFlex 1.6.
+IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than start)
